# Booking-website

./: .env.exaple  .flake8  .gitignore  DJANGO_FOR_BEGINNERS.md  Dockerfile  QUICK_START.md  README.md  create_test_data.py  docker-compose.yml  pyproject.toml  run_demo.py
booking/: admin.py  form.py  models.py  serializers.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_initial.py  0003_alter_booking_user.py  0004_alter_booking_unique_together_and_more.py  0005_booking_time_slot.py  0006_feedback.py
config/: settings.py  urls.py
templates/: about.html  base.html  bookingt_delite.html  free_dates.html  home.html  profile.html
templates/user/: login.html  register.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
