[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Ilia Ryutin <iryutin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.5"
dotenv = "^0.9.9"
djangorestframework = "^3.16.1"
psycopg2 = "^2.9.10"
pillow = "^11.3.0"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
